Closed Bug 1401297 Opened 8 years ago Closed 8 years ago

[10.13] Native titlebars are visible when exiting native fullscreen

Categories

(Core :: Widget: Cocoa, defect, P1)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: spohl, Assigned: spohl)

References

Details

Attachments

(2 files)

Split out from bug 1400057. STR: 1. Click the green fullscreen button in the top left corner of the browser window. 2. Move the mouse towards the top of the screen to reveal the native titlebar. 3. Click on the green button again to exit native fullscreen mode. Expected: Titlebar and tabs displays as expected. Actual: Native titlebar appears on top of tabs.
Attached patch PatchSplinter Review
Carrying over patch and r+ from attachment 8909811 [details] [diff] [review] in bug 1400057.
Attachment #8909926 - Flags: review+
(In reply to Stephen A Pohl [:spohl] from comment #1) > Created attachment 8909926 [details] [diff] [review] > Patch > > Carrying over patch and r+ from attachment 8909811 [details] [diff] [review] > in bug 1400057. This should have read attachment 8909843 [details] [diff] [review].
https://hg.mozilla.org/integration/mozilla-inbound/rev/f53d94fca971e3a6f6e742793dabbef8eb96f5de Bug 1401297: Hide native titlebars on macOS 10.13 when exiting native fullscreen. r=mstange
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Attached patch FollowupSplinter Review
The patch had a copy/paste error in the selector checks, which is fixed in this followup. Carrying over r+ since this was what was reviewed (indirectly, via bug 1398582 comment 30) and should have landed in the first place.
Attachment #8910276 - Flags: review+
Depends on: 1402577
Depends on: 1402740
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: