Bug 1401297: Followup to fix the selector checks in changeset f53d94fca971. r=mstange